--- a/client/css/index.css
+++ b/client/css/index.css
@@ -1,10 +1,17 @@
-* { font-family:tahoma; font-size:12px; padding:0px;margin:0px;}
-p { line-height:18px; }
-div { width:500px; margin-left:auto; margin-right:auto;}
-#content { padding:5px; background:#ddd; border-radius:5px;
-    overflow-y: scroll; border:1px solid #CCC;
-    margin-top:10px; height: 160px; }
-#input { border-radius:2px; border:1px solid #ccc;
-    margin-top:10px; padding:5px; width:400px;
+* { padding:0px;margin:2px;}
+p.src {
+    font-family: verdana;
+    font-size: 14px;
+    color: rgb(100, 100, 100)
 }
-#status { width:88px;display:block;float:left;margin-top:15px; }
+p.tgt {
+    font-family: verdana;
+    font-size: 20px;
+}
+div { width:500px; margin-left:auto; margin-right:auto;}
+input { border-radius:2px; border:1px solid rgb(214, 214, 214);
+    margin-top:10px; padding:5px; width:200px; font-size: 100%
+}
+select { border-radius:2px; border:1px solid rgb(214, 214, 214);
+    margin-top:10px; padding:5px; width:200px; font-size: 90%
+}
